--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ package-lock.json
 logs/
 *.log
 npm-debug.log*
+yarn-debug.log
+yarn-error.log
 
 # Runtime data
 pids
@@ -60,3 +62,11 @@ jspm_packages/
 *.swo
 *.swn
 .DS_Store
+
+
+# Testing
+coverage/
+
+# Build
+dist/
+build/
